# point-tracking-masters-thesis

./: .gitmodules  README.md  demo.ipynb  evaluate.py  evaluate.sh  pyproject.toml  train.py  train.sh
benchmarks/tapvid/: .gitignore  README.MD  evaluation_datasets.py
benchmarks/tapvid/davis/: README.md
tracker/: refinement.py  tracker.py  training.py  transformer.py
tracker/datasets/: __init__.py  kubric_seq.py
tracker/utils/: path_to_mast3r.py  training_utils.py  utils.py  video.py
