[project]
name = "point-tracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "absl-py>=2.3.1",
    "einops>=0.8.1",
    "huggingface-hub>=0.35.0",
    "mediapy>=1.2.4",
    "opencv-python>=4.12.0.88",
    "scipy>=1.16.2",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
